Add hash table benchmarks.